# bevy-discord

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRERELEASE-CHANGELOG.md  README.md  build.rs  deprecated-reason.md
.github/: FUNDING.yml  release-butler.toml
.github/workflows/: check-examples.yml  ci.yml  mirror.yml  publish.yml  weekly-ci.yml
.zed/: settings.json
examples/: basic_bot.rs  reactions.rs  rich_presence.rs  slash_commands.rs
src/: channel.rs  common.rs  config.rs  events.rs  lib.rs  messages.rs  plugins.rs  res.rs  runtime.rs
src/bot/: common.rs  event_handlers.rs  events.rs  handle.rs  http.rs  mod.rs
src/http/: mod.rs
src/rich_presence/: discord_sdk.rs  event_handlers.rs  mod.rs
src/webhook/: common.rs  mod.rs
