[package]
name = "bevy-discord"
description = "A bevy plugin for sending and receiving discord messages."
version = "0.6.0-alpha.2"
edition = "2021"
authors = ["Aditya Kumar <theadityakumardeveloper@gmail.com>"]
readme = "README.md"
repository = "https://github.com/AS1100K/bevy-discord"
publish = true
license = "MIT"
keywords = ["bevy", "plugin", "discord"]

[features]
full = ["bot", "http", "rich_presence"]
bot = ["tokio/sync", "http"]
http = ["dep:serenity"]
bot_cache = ["serenity/cache"]
rich_presence = ["dep:discord-sdk", "dep:async-trait"]
rich_presence_local_testing = ["discord-sdk/local-testing"]
docsrs = []

[dependencies]
bevy_app = "0.15"
bevy_ecs = "0.15"
flume = "0.11"
serenity = { version = "0.12", features = [
    "gateway",
    "framework",
    "model",
], optional = true }
paste = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "rt"] }
discord-sdk = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
bevy = "0.15"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "basic_bot"
doc-scrape-examples = true

[[example]]
name = "reactions"
doc-scrape-examples = true

[[example]]
name = "slash_commands"
doc-scrape-examples = true

[[example]]
name = "rich_presence"
doc-scrape-examples = true