[package]
name = "bevy-discord"
description = "A bevy plugin for sending and receiving discord messages."
version = "0.7.0"
edition = "2024"
authors = ["Aditya Kumar <git@adityais.dev>"]
readme = "README.md"
repository = "https://github.com/AS1100K/bevy-discord"
publish = true
license = "MIT"
keywords = ["bevy", "plugin", "discord"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
full = ["bot", "http", "rich_presence"]
bot = ["tokio/sync", "http"]
http = ["dep:serenity"]
bot_cache = ["serenity/cache"]
rich_presence = ["dep:discord-sdk", "dep:async-trait"]
rich_presence_local_testing = ["discord-sdk/local-testing"]

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
flume = "0.12"
serenity = { version = "0.12", features = [
    "gateway",
    "framework",
    "model",
], optional = true }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "rt"] }
discord-sdk = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
pastey = "0.2"

[dev-dependencies]
bevy = "0.17"
serde_json = "1"

[package.metadata.cargo-feature-combinations]
skip_feature_sets = [["bot", "docsrs"]]
denylist = ["default", "full", "bot_cache", "rich_presence_local_testing"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "basic_bot"
doc-scrape-examples = true

[[example]]
name = "reactions"
doc-scrape-examples = true

[[example]]
name = "slash_commands"
doc-scrape-examples = true

[[example]]
name = "rich_presence"
doc-scrape-examples = true
