[package]
name = "bevy-discord"
description = "A bevy plugin for sending and receiving discord messages."
version = "0.8.0"
edition = "2024"
authors = ["Aditya Kumar <git@adityais.dev>"]
readme = "README.md"
repository = "https://github.com/AS1100K/bevy-discord"
publish = true
license = "MIT"
keywords = ["bevy", "plugin", "discord"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
full = ["bot", "http", "rich_presence", "tokio_runtime"]
bot = ["dep:tokio", "tokio/rt", "tokio/sync", "http"]
http = ["dep:serenity"]
bot_cache = ["serenity/cache"]
rich_presence = ["dep:discord-sdk", "dep:async-trait", "tokio_runtime"]
rich_presence_local_testing = ["discord-sdk/local-testing"]
## Enables creation of a managed static Tokio runtime within the library.
##
## - Required by `rich_presence` (discord-sdk depends on Tokio).
## - Optional for `bot`: when omitted the library will use
##   [`tokio::runtime::Handle::current()`] and therefore expects the caller to
##   provide an active Tokio runtime (e.g. via `#[tokio::main]`).
## - Also useful for running ad-hoc async code from Bevy systems via
##   [`crate::runtime::tokio_runtime()`].
tokio_runtime = ["dep:tokio", "tokio/rt-multi-thread"]

[dependencies]
bevy_app = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
flume = "0.12"
serenity = { version = "0.12", features = [
    "gateway",
    "framework",
    "model",
], optional = true }
tracing = "0.1"
tokio = { version = "1", optional = true }
discord-sdk = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
pastey = "0.2"

[dev-dependencies]
bevy = "0.18"
serde_json = "1"

[package.metadata.cargo-feature-combinations]
skip_feature_sets = [["bot", "docsrs"]]
denylist = ["default", "full", "bot_cache", "rich_presence_local_testing"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "basic_bot"
doc-scrape-examples = true

[[example]]
name = "reactions"
doc-scrape-examples = true

[[example]]
name = "slash_commands"
doc-scrape-examples = true

[[example]]
name = "rich_presence"
doc-scrape-examples = true
